--- a/Travel-Company.WPF/MVVM/View/Catalogs/CatalogsView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Catalogs/CatalogsView.xaml
@@ -1,25 +1,23 @@
-﻿<UserControl x:Class="Travel_Company.WPF.MVVM.View.Employees.EmployeesView"
+﻿<UserControl x:Class="Travel_Company.WPF.MVVM.View.Catalogs.CatalogsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Travel_Company.WPF.MVVM.View.Employees"
-             xmlns:employees="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Employees"
-             d:DataContext="{d:DesignInstance Type=employees:EmployeesViewModel}"
+             xmlns:local="clr-namespace:Travel_Company.WPF.MVVM.View.Catalogs"
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="15">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <!-- Page Header-->
         <TextBlock Grid.Row="0"
-                   Text="Employees"
-                   Style="{StaticResource PageHeader}"/>
-        
+                   Text="Catalog"
+                   Style="{StaticResource PageHeader}" />
+
         <!-- Search Bar -->
         <Grid Grid.Row="1"
               Margin="5">
@@ -35,18 +33,18 @@
                           CellStyle="{DynamicResource DataGridCellStyle1}"
                           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}"
                           RowStyle="{DynamicResource DataGridRowStyle1}"
-                          x:Name="DataGridEmployees"
+                          x:Name="DataGridCatalog"
                           Grid.Row="2"
                           d:ItemsSource="{d:SampleData ItemCount=5}"
-                          ItemsSource="{Binding Employees}"
-                          AutoGenerateColumns="False" 
+                          ItemsSource="{Binding CatalogList}"
+                          AutoGenerateColumns="False"
                           Margin="0 0 4 0"
-                          SelectedItem="{Binding SelectedTourGuide}">
+                          SelectedItem="{Binding SelectedCatalogItem}">
                     <DataGrid.Columns>
                         <!-- Fields -->
-                        <DataGridTemplateColumn Header="Full name"
+                        <DataGridTemplateColumn Header="Name"
                                                 IsReadOnly="True"
-                                                Width="auto">
+                                                Width="*">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
@@ -54,43 +52,28 @@
                                                 Height="8"
                                                 CornerRadius="4"
                                                 Margin="0 0 10 0"
-                                                Background="{StaticResource Primary4Brush}">
-                                        </Border>
-
-                                        <TextBlock Text="{Binding Path=FullName}"
+                                                Background="{StaticResource Primary4Brush}" />
+                                        <TextBlock Text="{Binding Path=Name}"
                                                    VerticalAlignment="Center" />
                                     </StackPanel>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
-
-                        <DataGridTextColumn Header="Street"
-                                            IsReadOnly="True"
-                                            Width="*"
-                                            Binding="{Binding Path=Street.Name}" />
-                        <DataGridTextColumn Header="Birthdate"
-                                            IsReadOnly="True"
-                                            Width="*"
-                                            Binding="{Binding Path=Birthdate, StringFormat=dd/MM/yyyy}" />
-                        <DataGridTextColumn Header="Salary"
-                                            IsReadOnly="True"
-                                            Width="*"
-                                            Binding="{Binding Path=Salary}" />
                     </DataGrid.Columns>
                 </DataGrid>
 
                 <!-- Buttons -->
                 <DockPanel Grid.Row="3"
                            Margin="0 15 0 0">
-                    <Button Content="Add" 
+                    <Button Content="Add"
                             Margin="0 0 15 0"
-                            Command="{Binding NavigateToEmployeesInsertCommand}"/>
+                            Command="{Binding NavigateToInsertCommand}" />
                     <Button Content="Edit"
                             Margin="0 0 15 0"
-                            Command="{Binding NavigateToEmployeesUpdateCommand}"/>
-                    <Button Content="Fire"
+                            Command="{Binding NavigateToUpdateCommand}" />
+                    <Button Content="Delete"
                             HorizontalAlignment="Left"
-                            Command="{Binding FireSelectedEmployeeCommand}" />
+                            Command="{Binding DeleteSelectedCatalogCommand}" />
                 </DockPanel>
             </StackPanel>
         </ScrollViewer>
