--- a/Travel-Company.WPF/MVVM/View/Catalogs/CatalogsCreateView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Catalogs/CatalogsCreateView.xaml
@@ -4,9 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Travel_Company.WPF.MVVM.View.Catalogs"
+             xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
+             xmlns:catalogs="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Catalogs"
+             d:DataContext="{d:DesignInstance Type=catalogs:CatalogsCreateViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <component:CatalogItemForm State="Inserting"
+                                   RelayCommand="{Binding CreateCommand}" />
     </Grid>
 </UserControl>
