--- a/Travel-Company.WPF/Resources/Components/CatalogItemForm.xaml
+++ b/Travel-Company.WPF/Resources/Components/CatalogItemForm.xaml
@@ -8,6 +8,11 @@
              d:DataContext="{d:DesignInstance Type=catalogs:CatalogsUpdateViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <DiscreteObjectKeyFrame x:Key="IsClassElementVisibleKeyFrame"
+                                Value="{Binding IsClassElementVisible}" />
+    </UserControl.Resources>
+
     <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -27,6 +32,16 @@
                 <local:Input ComponentName="Catalog name"
                              Text="{Binding CatalogItem.Name, Mode=TwoWay}"
                              Margin="0 0 0 10" />
+
+                <StackPanel x:Name="StackPanelClassElement"
+                            Visibility="{Binding Value, Source={StaticResource IsClassElementVisibleKeyFrame}}">
+                    <TextBlock Text="Class"
+                               Style="{StaticResource ComponentTitle}" />
+                    <local:Input ComponentName="Class"
+                                 Text="{Binding CatalogItem.Class, Mode=TwoWay}"
+                                 Margin="0 0 0 10" />
+                </StackPanel>
+                
 
                 <!-- Buttons -->
                 <DockPanel Margin="0 12">
