--- a/Travel-Company.WPF/Resources/Components/EmployeeForm.xaml
+++ b/Travel-Company.WPF/Resources/Components/EmployeeForm.xaml
@@ -62,7 +62,7 @@
                              Margin="0 0 0 10" />
 
                 <!-- Buttons -->
-                <DockPanel Margin="0 12">
+                <DockPanel>
                     <Button x:Name="ButtonProceed"
                             Margin="0 0 15 0"
                             Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:EmployeeForm}}, Path=RelayCommand}" />
