feat: red delete fire button style, buttons placement, searchbars' names

--- a/Travel-Company.WPF/MVVM/View/Clients/ClientsView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Clients/ClientsView.xaml
@@ -18,6 +18,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <!-- Page Header-->
@@ -28,12 +29,35 @@
         <!-- Search Bar -->
         <Grid Grid.Row="1"
               Margin="5">
-            <component:SearchBar />
+            <component:SearchBar Placeholder="Search" />
         </Grid>
 
-        <ScrollViewer Grid.Row="2"
+        <!-- Buttons -->
+        <StackPanel Grid.Row="2">
+            <DockPanel Margin="5">
+                <Button Content="Add"
+                        Margin="0 0 15 0"
+                        Command="{Binding NavigateToInsertingCommand}" />
+                <Button Content="Edit"
+                        Margin="0 0 15 0"
+                        Command="{Binding NavigateToUpdatingCommand}" />
+                <Button Content="Delete"
+                        HorizontalAlignment="Left"
+                        Margin="0 0 15 0"
+                        Command="{Binding DeleteSelectedItemCommand}"
+                        Style="{StaticResource FireRemoveButton}"/>
+                <Button Content="{Binding ToggleButtonContent}"
+                        HorizontalAlignment="Left"
+                        Command="{Binding ToggleColumnsCommand}" />
+            </DockPanel>
+            <Border Background="{StaticResource Primary8Brush}"
+                    Height="1"
+                    Margin="6 8 6 0" />
+        </StackPanel>
+        
+        <ScrollViewer Grid.Row="3"
                       Padding="0 0 5 5"
-                      Margin="5 10 0 15">
+                      Margin="5 0 0 15">
             <StackPanel>
                 <!-- Data -->
                 <DataGrid Style="{DynamicResource DataGridStyle1}"
@@ -44,7 +68,7 @@
                           Grid.Row="2"
                           d:ItemsSource="{d:SampleData ItemCount=5}"
                           ItemsSource="{Binding Clients}"
-                          Margin="0 0 4 0"
+                          Margin="0 8 4 0"
                           SelectedItem="{Binding SelectedClient}"
                           HorizontalScrollBarVisibility="Visible">
                     <DataGrid.Columns>
@@ -85,37 +109,19 @@
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=Passport}"
-                                            Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}"/>
+                                            Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}" />
                         <DataGridTextColumn Header="Issue date"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=PassportIssueDate, StringFormat=dd/MM/yyyy}"
-                                            Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}"/>
+                                            Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}" />
                         <DataGridTextColumn Header="Authority"
                                             IsReadOnly="True"
                                             Width="auto"
                                             Binding="{Binding Path=PassportIssuingAuthority}"
-                                            Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}"/>
+                                            Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}" />
                     </DataGrid.Columns>
                 </DataGrid>
-
-                <!-- Buttons -->
-                <DockPanel Grid.Row="3"
-                           Margin="0 15 0 0">
-                    <Button Content="Add"
-                            Margin="0 0 15 0"
-                            Command="{Binding NavigateToInsertingCommand}" />
-                    <Button Content="Edit"
-                            Margin="0 0 15 0"
-                            Command="{Binding NavigateToUpdatingCommand}" />
-                    <Button Content="Delete"
-                            HorizontalAlignment="Left"
-                            Margin="0 0 15 0"
-                            Command="{Binding DeleteSelectedItemCommand}" />
-                    <Button Content="{Binding ToggleButtonContent}"
-                            HorizontalAlignment="Left"
-                            Command="{Binding ToggleColumnsCommand}" />
-                </DockPanel>
             </StackPanel>
         </ScrollViewer>
     </Grid>
