--- a/Travel-Company.WPF/MVVM/View/Catalogs/CatalogsView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Catalogs/CatalogsView.xaml
@@ -19,6 +19,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <!-- Page Header-->
@@ -29,13 +30,32 @@
         <!-- Search Bar -->
         <Grid Grid.Row="1"
               Margin="5">
-            <component:SearchBar />
+            <component:SearchBar Placeholder="Search" />
         </Grid>
 
+        <!-- Buttons -->
+        <StackPanel Grid.Row="2">
+            <DockPanel Margin="5">
+                <Button Content="Add"
+                        Margin="0 0 15 0"
+                        Command="{Binding NavigateToInsertingCommand}" />
+                <Button Content="Edit"
+                        Margin="0 0 15 0"
+                        Command="{Binding NavigateToUpdatingCommand}" />
+                <Button Content="Delete"
+                        HorizontalAlignment="Left"
+                        Command="{Binding DeleteSelectedItemCommand}"
+                        Style="{StaticResource FireRemoveButton}" />
+            </DockPanel>
+            <Border Background="{StaticResource Primary8Brush}"
+                    Height="1"
+                    Margin="6 8 6 0" />
+        </StackPanel>
+
         <!-- Content -->
-        <ScrollViewer Grid.Row="2"
+        <ScrollViewer Grid.Row="3"
                       Padding="0 0 5 5"
-                      Margin="5 10 0 15">
+                      Margin="5 0 0 15">
             <StackPanel>
                 <!-- Data -->
                 <DataGrid Style="{DynamicResource DataGridStyle1}"
@@ -46,7 +66,7 @@
                           Grid.Row="2"
                           d:ItemsSource="{d:SampleData ItemCount=5}"
                           ItemsSource="{Binding CatalogItems}"
-                          Margin="0 0 4 0"
+                          Margin="0 8 4 0"
                           SelectedItem="{Binding SelectedCatalogItem}">
                     <DataGrid.Columns>
                         <!-- Fields -->
@@ -76,20 +96,6 @@
                                             Visibility="{Binding Value, Source={StaticResource IsClassColumnVisibleKeyFrame}}" />
                     </DataGrid.Columns>
                 </DataGrid>
-
-                <!-- Buttons -->
-                <DockPanel Grid.Row="3"
-                           Margin="0 15 0 0">
-                    <Button Content="Add"
-                            Margin="0 0 15 0"
-                            Command="{Binding NavigateToInsertingCommand}" />
-                    <Button Content="Edit"
-                            Margin="0 0 15 0"
-                            Command="{Binding NavigateToUpdatingCommand}" />
-                    <Button Content="Delete"
-                            HorizontalAlignment="Left"
-                            Command="{Binding DeleteSelectedItemCommand}" />
-                </DockPanel>
             </StackPanel>
         </ScrollViewer>
     </Grid>
