--- a/Travel-Company.WPF/Resources/Styles/Styles.xaml
+++ b/Travel-Company.WPF/Resources/Styles/Styles.xaml
@@ -27,7 +27,39 @@
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="0"
                             CornerRadius="6"
-                            Padding="10 0 10 0">
+                            Padding="13 0 13 0">
+                        <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="FireRemoveButton"
+           TargetType="{x:Type Button}">
+        <Setter Property="Background"
+                Value="Transparent" />
+        <Setter Property="Foreground"
+                Value="{StaticResource RedLightBrush}" />
+        <Setter Property="FontSize"
+                Value="14" />
+        <Setter Property="FontWeight"
+                Value="Bold" />
+        <Setter Property="Height"
+                Value="36" />
+        <Setter Property="Focusable"
+                Value="False" />
+        <Setter Property="Cursor"
+                Value="Hand" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{StaticResource RedLightBrush}"
+                            BorderThickness="2"
+                            CornerRadius="6"
+                            Padding="13 0 13 0">
                         <ContentPresenter HorizontalAlignment="Center"
                                           VerticalAlignment="Center" />
                     </Border>
@@ -640,7 +672,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
                     <Border x:Name="brd_VerticalScrollBarBorder"
-                            CornerRadius="4"
+                            CornerRadius="2"
                             Background="{DynamicResource Primary6Brush}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="0"
@@ -671,7 +703,7 @@
                 <RowDefinition MaxHeight="0" />
             </Grid.RowDefinitions>
             <Border Grid.RowSpan="3"
-                    CornerRadius="4"
+                    CornerRadius="2"
                     Margin="5,2,5,2"
                     Background="{DynamicResource Primary8Brush}" />
             <RepeatButton Grid.Row="0"
@@ -720,7 +752,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
                     <Border x:Name="brd_HorizontalScrollBarBorder"
-                            CornerRadius="4"
+                            CornerRadius="2"
                             Background="{DynamicResource Primary6Brush}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="0"
@@ -750,7 +782,7 @@
                 <ColumnDefinition MaxWidth="4" />
             </Grid.ColumnDefinitions>
             <Border Grid.ColumnSpan="3"
-                    CornerRadius="4"
+                    CornerRadius="2"
                     Margin="3,5,1,5"
                     Background="{DynamicResource Primary8Brush}" />
             <RepeatButton Grid.Column="0"
