--- a/Travel-Company.WPF/Resources/Templates/Views.xaml
+++ b/Travel-Company.WPF/Resources/Templates/Views.xaml
@@ -1,13 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:views="clr-namespace:Travel_Company.WPF.MVVM.View"
+                    xmlns:viewModels="clr-namespace:Travel_Company.WPF.MVVM.ViewModel"
                     xmlns:employeesView="clr-namespace:Travel_Company.WPF.MVVM.View.Employees"
                     xmlns:clientsView="clr-namespace:Travel_Company.WPF.MVVM.View.Clients"
                     xmlns:catalogsView="clr-namespace:Travel_Company.WPF.MVVM.View.Catalogs"
-                    xmlns:viewModels="clr-namespace:Travel_Company.WPF.MVVM.ViewModel"
+                    xmlns:penaltiesView="clr-namespace:Travel_Company.WPF.MVVM.View.Penalties"
                     xmlns:employeesVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Employees"
                     xmlns:clientsVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Clients"
-                    xmlns:catalogsVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Catalogs">
+                    xmlns:catalogsVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Catalogs"
+                    xmlns:penaltiesVm="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Penalties">
     <DataTemplate DataType="{x:Type TypeName=viewModels:LoginViewModel}">
         <views:LoginView />
     </DataTemplate>
@@ -40,5 +42,9 @@
     </DataTemplate>
     <DataTemplate DataType="{x:Type TypeName=catalogsVm:CatalogsUpdateViewModel}">
         <catalogsView:CatalogsUpdateView />
+    </DataTemplate>
+
+    <DataTemplate DataType="{x:Type TypeName=penaltiesVm:PenaltiesViewModel}">
+        <penaltiesView:PenaltiesView />
     </DataTemplate>
 </ResourceDictionary>
