feat: penalty update/create form, event remove method

--- a/Travel-Company.WPF/MVVM/View/Penalties/PenaltiesView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Penalties/PenaltiesView.xaml
@@ -18,7 +18,7 @@
         </Grid.RowDefinitions>
         <!-- Page Header-->
         <TextBlock Grid.Row="0"
-                   Text="Penalties"
+                   Text="{Binding PageTitle}"
                    Style="{StaticResource PageHeader}" />
 
         <!-- Search Bar -->
