feat: tourist groups view, misc

--- a/Travel-Company.WPF/MVVM/View/MainWindow.xaml
+++ b/Travel-Company.WPF/MVVM/View/MainWindow.xaml
@@ -171,7 +171,8 @@
                              ToolTip="Groups"
                              Template="{StaticResource MainMenuRadioButton}"
                              IsChecked="False"
-                             Margin="1">
+                             Margin="1"
+                             Command="{Binding NavigateToTouristGroupsCommand}">
                     <RadioButton.Content>
                         <StackPanel Orientation="Horizontal">
                             <Path Fill="{StaticResource Primary4Brush}"
