--- a/Travel-Company.WPF/MVVM/View/Groups/GroupsView.xaml
+++ b/Travel-Company.WPF/MVVM/View/Groups/GroupsView.xaml
@@ -1,19 +1,14 @@
-﻿<UserControl x:Class="Travel_Company.WPF.MVVM.View.Clients.ClientsView"
+﻿<UserControl x:Class="Travel_Company.WPF.MVVM.View.Groups.GroupsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Travel_Company.WPF.MVVM.View.Clients"
+             xmlns:local="clr-namespace:Travel_Company.WPF.MVVM.View.Groups"
              xmlns:component="clr-namespace:Travel_Company.WPF.Resources.Components"
-             xmlns:clients="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Clients"
-             d:DataContext="{d:DesignInstance Type=clients:ClientsViewModel}"
+             xmlns:groups="clr-namespace:Travel_Company.WPF.MVVM.ViewModel.Groups"
+             d:DataContext="{d:DesignInstance Type=groups:GroupsViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-        <DiscreteObjectKeyFrame x:Key="IsPassportDataVisibleKeyFrame"
-                                Value="{Binding IsPassportDataVisible}" />
-    </UserControl.Resources>
-    
     <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -23,7 +18,7 @@
         </Grid.RowDefinitions>
         <!-- Page Header-->
         <TextBlock Grid.Row="0"
-                   Text="Clients"
+                   Text="Tourist Groups"
                    Style="{StaticResource PageHeader}" />
 
         <!-- Search Bar -->
@@ -43,21 +38,15 @@
                         Command="{Binding NavigateToUpdatingCommand}" />
                 <Button Content="Delete"
                         HorizontalAlignment="Left"
-                        Margin="0 0 15 0"
                         Command="{Binding DeleteSelectedItemCommand}"
-                        Style="{StaticResource FireRemoveButton}"/>
-                <Button Content="Penalties"
-                        Margin="0 0 15 0"
-                        Command="{Binding NavigateToPenaltiesCommand}" />
-                <Button Content="{Binding ToggleButtonContent}"
-                        HorizontalAlignment="Left"
-                        Command="{Binding ToggleColumnsCommand}" />
+                        Style="{StaticResource FireRemoveButton}" />
             </DockPanel>
             <Border Background="{StaticResource Primary8Brush}"
                     Height="1"
                     Margin="6 8 6 0" />
         </StackPanel>
-        
+
+        <!-- Content -->
         <ScrollViewer Grid.Row="3"
                       Padding="0 0 5 5"
                       Margin="5 0 0 15">
@@ -67,15 +56,14 @@
                           CellStyle="{DynamicResource DataGridCellStyle1}"
                           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}"
                           RowStyle="{DynamicResource DataGridRowStyle1}"
-                          x:Name="DataGridClients"
                           d:ItemsSource="{d:SampleData ItemCount=5}"
-                          ItemsSource="{Binding Clients}"
+                          ItemsSource="{Binding Path=Groups}"
                           Margin="0 8 4 0"
-                          SelectedItem="{Binding SelectedClient}"
-                          HorizontalScrollBarVisibility="Visible">
+                          SelectedItem="{Binding Path=SelectedItem}"
+                          HorizontalScrollBarVisibility="Auto">
                     <DataGrid.Columns>
                         <!-- Fields -->
-                        <DataGridTemplateColumn Header="Full name"
+                        <DataGridTemplateColumn Header="Name"
                                                 IsReadOnly="True"
                                                 Width="auto">
                             <DataGridTemplateColumn.CellTemplate>
@@ -85,47 +73,26 @@
                                                 Height="8"
                                                 CornerRadius="4"
                                                 Margin="0 0 10 0"
-                                                Background="{StaticResource Primary4Brush}">
-                                        </Border>
-
-                                        <TextBlock Text="{Binding Path=FullName}"
+                                                Background="{StaticResource Primary4Brush}" />
+                                        <TextBlock Text="{Binding Path=Name}"
                                                    VerticalAlignment="Center" />
                                     </StackPanel>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
 
-                        <DataGridTextColumn Header="Street"
+                        <DataGridTextColumn Header="Route"
                                             IsReadOnly="True"
                                             Width="auto"
-                                            Binding="{Binding Path=Street.Name}" />
-                        <DataGridTextColumn Header="Birthdate"
+                                            Binding="{Binding Path=Route.Name}" />
+                        <DataGridTextColumn Header="Tourists"
                                             IsReadOnly="True"
                                             Width="auto"
-                                            Binding="{Binding Path=Birthdate, StringFormat=dd/MM/yyyy}" />
-                        <DataGridTextColumn Header="Group"
+                                            Binding="{Binding Path=Clients.Count}" />
+                        <DataGridTextColumn Header="Responsible"
                                             IsReadOnly="True"
                                             Width="auto"
-                                            Binding="{Binding Path=TouristGroup.Name}" />
-                        <DataGridTextColumn Header="Penalties"
-                                            IsReadOnly="True"
-                                            Width="auto"
-                                            Binding="{Binding Path=Penalties.Count}" />
-                        <DataGridTextColumn Header="Passport"
-                                            IsReadOnly="True"
-                                            Width="auto"
-                                            Binding="{Binding Path=Passport}"
-                                            Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}" />
-                        <DataGridTextColumn Header="Issue date"
-                                            IsReadOnly="True"
-                                            Width="auto"
-                                            Binding="{Binding Path=PassportIssueDate, StringFormat=dd/MM/yyyy}"
-                                            Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}" />
-                        <DataGridTextColumn Header="Authority"
-                                            IsReadOnly="True"
-                                            Width="auto"
-                                            Binding="{Binding Path=PassportIssuingAuthority}"
-                                            Visibility="{Binding Value, Source={StaticResource IsPassportDataVisibleKeyFrame}}" />
+                                            Binding="{Binding Path=TourGuide.FullName}" />
                     </DataGrid.Columns>
                 </DataGrid>
             </StackPanel>
